# aishiteru

./: .gitignore  AUTHOR  CMakeLists.txt  CMakeLists.txt~  Dockerfile  Makefile.am  README.md  README.org  aclocal.m4  aishiteru.pc.cmake  aishiteru.pc.in  autogen.sh  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/aishiteru/: capi.h  train.h  train.h~
src/api/: aishiterumain.cpp  baseapi.cpp  capi.cpp
src/dict/: dict.cpp  dict.cpp~  dict.h  dict.h~
src/train/: Train.cpp
